core/stdlib/tests/ui/wrapper_invalid_union.rs
use stdlib::Wrapper;

#[derive(Wrapper)]
union Invalid {
    x: u64,
}
